--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -36,6 +36,7 @@ jobs:
         run: |
           sudo mkdir -p /root/.cache/puppeteer
           sudo chmod -R 777 /root/.cache/puppeteer
+          mkdir -p .lighthouseci
 
       - name: Cache Turbo
         uses: actions/cache@v3
@@ -80,7 +81,8 @@ jobs:
         run: |
           bunx @lhci/cli@0.14.x autorun \
             --upload.target=temporary-public-storage \
-            --upload.githubStatusContextSuffix=":lighthouse"
+            --upload.githubStatusContextSuffix=":lighthouse" \
+            --collect.outputPath=".lighthouseci"
 
       - name: Upload artifacts
         if: always()
