--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 permissions:
-  contents: read
+  contents: write
   checks: write
   statuses: write
   pull-requests: write
@@ -80,31 +80,36 @@ jobs:
         run: |
           bunx @lhci/cli@0.14.x autorun
 
-      - name: Generate Lighthouse Badges
+      - name: Process Lighthouse Results
         if: success()
         run: |
-          bun scripts/lighthouse/generate-badges.ts
+          # Lighthouse結果の確認
+          if [ -d ".lighthouseci" ]; then
+            echo "Generating badges from Lighthouse results..."
+            bun scripts/lighthouse/generate-badges.ts
 
-      - name: Update README with Badges
-        if: success()
-        run: |
-          # バッジURLの取得と更新
-          for category in performance accessibility bestPractices seo; do
-            url=$(jq -r .url .github/badges/${category}.json)
-            # カテゴリ名の最初の文字を大文字に変換
-            displayName=$(echo "$category" | sed 's/^./\U&/')
+            # バッジディレクトリの作成
+            mkdir -p .github/badges
+
             # READMEの更新
-            sed -i "s|!\[$displayName\]([^)]*)|![$displayName]($url)|" README.md
-          done
+            for category in performance accessibility bestPractices seo; do
+              if [ -f ".github/badges/${category}.json" ]; then
+                url=$(cat ".github/badges/${category}.json" | bun x json url)
+                displayName=$(echo "$category" | sed 's/^./\U&/')
+                sed -i "s|!\[$displayName\]([^)]*)|![$displayName]($url)|" README.md
+              fi
+            done
 
-      - name: Commit and Push Changes
-        if: success()
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add .github/badges README.md
-          git commit -m "docs: 🎨 Lighthouse スコアバッジを更新" || echo "No changes to commit"
-          git push
+            # 変更をコミット
+            git config --global user.name 'github-actions[bot]'
+            git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+            git add .github/badges README.md
+            git commit -m "docs: 🎨 Lighthouse スコアバッジを更新" || echo "No changes to commit"
+            git push
+          else
+            echo "No Lighthouse results found"
+            exit 1
+          fi
 
       - name: Upload artifacts
         if: always()
